--- a/compose.yaml
+++ b/compose.yaml
@@ -2,24 +2,28 @@ services:
 
   db:
     image: mariadb:11
+    env_file:
+      - ./.env
     restart: always
     volumes:
-      - ./wp_db:/var/lib/mysql
+      - ./db:/var/lib/mysql
     environment:
-      MYSQL_ROOT_PASSWORD: /run/secrets/db_root_password
-      MYSQL_DATABASE: /run/secrets/db_name
-      MYSQL_USER: /run/secrets/wp_user
-      MYSQL_PASSWORD: /run/secrets/db_password
+      MYSQL_ROOT_PASSWORD: ${DB_ROOT_PASS}
+      MYSQL_DATABASE: ${DB_NAME}
+      MYSQL_USER: ${DB_USER}
+      MYSQL_PASSWORD: ${DB_PASS}
 
   phpmyadmin:
     depends_on:
       - db
     image: phpmyadmin/phpmyadmin:latest
+    env_file:
+      - ./.env
     restart: always
     environment:
-      PMA_HOST: db
-      PMA_USER: /run/secrets/wp_user
-      PMA_PASSWORD: /run/secrets/db_password
+      PMA_HOST: db:3306
+      PMA_USER: ${DB_USER}
+      PMA_PASSWORD: ${DB_PASS}
     ports:
       - "8080:80"
 
@@ -27,23 +31,25 @@ services:
     depends_on:
       - db
     image: wordpress:latest
+    env_file:
+      - ./.env
     restart: always
     ports:
       - 8000:80
     environment:
       WORDPRESS_DB_HOST: db:3306
-      WORDPRESS_DB_USER: /run/secrets/wp_user
-      WORDPRESS_DB_PASSWORD: /run/secrets/db_password
-      WORDPRESS_DB_NAME: /run/secrets/db_name
+      WORDPRESS_DB_USER: ${DB_USER}
+      WORDPRESS_DB_PASSWORD: ${DB_PASS}
+      WORDPRESS_DB_NAME: ${DB_NAME}
     volumes:
-      - ./wp_content:/var/www/html
+      - ./site:/var/www/html
 
-secrets:
-  db_password:
-    file: ./secrets/db_password.txt
-  db_root_password:
-    file: ./secrets/db_root_password.txt
-  db_name:
-    file: ./secrets/db_name.txt
-  wp_user:
-    file: ./secrets/wp_user.txt
+#secrets:
+#  db_password:
+#    file: ./secrets/db_password.txt
+#  db_root_password:
+#    file: ./secrets/db_root_password.txt
+#  db_name:
+#    file: ./secrets/db_name.txt
+#  wp_user:
+#    file: ./secrets/wp_user.txt
